--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.13.2",
     "better-sqlite3": "^12.6.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
