--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.8.3",
     "whatsapp-web.js": "^1.34.4"
   },
   "devDependencies": {
