--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.3",
     "whatsapp-web.js": "^1.34.4"
