--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^5.2.1",
+    "i18next": "^25.8.0",
+    "i18next-fs-backend": "^2.6.1",
     "jsdom": "^27.4.0",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
