feat: add production deployment configuration
- Configure server to serve built React files in production
- Update client to use relative URLs in production (same origin)
- Add Render.com deployment config (render.yaml)
- Create comprehensive deployment guide (DEPLOYMENT.md)
- Add .env.production for client build config
- Update .gitignore to allow .env.production

Deployment options:
- Render.com (recommended, free tier available)
- Railway.app (alternative)

Ready to deploy with single command from Render dashboard.

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,9 @@ client/node_modules/
 client/dist/
 dist/
 
-# Environment files
+# Environment files (keep .env.production for deployment config)
 .env
 .env.local
-.env.production
 
 # Database (ignore locally, but Railway will persist it)
 # For local development, we ignore DB files
