--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
     "i18next": "^25.8.0",
     "i18next-fs-backend": "^2.6.1",
     "jsdom": "^27.4.0",
-    "mongoose": "^8.21.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "puppeteer-core": "^24.36.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.3",
-    "whatsapp-web.js": "^1.34.4",
-    "wwebjs-mongo": "^1.1.0"
+    "whatsapp-web.js": "^1.34.4"
   },
   "devDependencies": {
     "concurrently": "^9.2.1",
