--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
+    "react-swipeable": "^7.0.2",
     "react-tailwindcss-datepicker": "^2.0.0",
     "socket.io-client": "^4.8.3"
   },
