--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "puppeteer-core": "^24.36.0",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.3",
     "whatsapp-web.js": "^1.34.4"
