--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,7 +7,7 @@ cmds = ['npm ci']
 
 [phases.build]
 cmds = [
-  'cd client && npm ci --legacy-peer-deps && npm run build',
+  'cd client && npm ci --include=dev --legacy-peer-deps && npm run build',
   'npx puppeteer browsers install chrome'
 ]
 
