--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dev:all:fixed-ports": "concurrently \"npm run dev:server\" \"npm run dev:client:maintenance\" \"npm run dev:client:hq\"",
     "build": "cd client && npm run build",
     "start": "node server/index.js",
-    "install:all": "npm install && cd client && npm install"
+    "install:all": "npm install && cd client && npm install",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "keywords": [
     "maintenance",
@@ -48,6 +50,7 @@
     "whatsapp-web.js": "^1.34.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11"
   }
